// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runMigrations should add a column 1`] = `
{
  "newQueryExcuted": [
    {
      "name": "0000000000000-generated.yml",
      "querySet": [
        {
          "query": "ALTER TABLE "caliobase_test_migrations_entity"
ADD "description" character varying NOT NULL",
        },
      ],
    },
  ],
  "pendingQueryExecuted": [],
}
`;

exports[`runMigrations should create new migrations 1`] = `
{
  "newQueryExcuted": [
    {
      "name": "-0000000000001-generated.yml",
      "querySet": [
        {
          "query": "CREATE TABLE "caliobase_test_migrations_entity" (
  "id" SERIAL NOT NULL,
  "name" character varying NOT NULL,
  CONSTRAINT "PK_04e9c1f71b555b5faab531dc5fb" PRIMARY KEY ("id")
)",
        },
      ],
    },
  ],
  "pendingQueryExecuted": [],
}
`;

exports[`runMigrations should remove a column 1`] = `
{
  "newQueryExcuted": [
    {
      "name": "0000000000001-generated.yml",
      "querySet": [
        {
          "query": "ALTER TABLE "caliobase_test_migrations_entity" DROP COLUMN "description"",
        },
      ],
    },
  ],
  "pendingQueryExecuted": [],
}
`;

exports[`runMigrations should run other migrations 1`] = `
{
  "newQueryExcuted": [],
  "pendingQueryExecuted": [
    {
      "name": "-0000000000001-generated.yml",
      "querySet": [
        {
          "query": "CREATE TABLE "caliobase_test_migrations_entity" (
  "id" SERIAL NOT NULL,
  "name" character varying NOT NULL,
  CONSTRAINT "PK_04e9c1f71b555b5faab531dc5fb" PRIMARY KEY ("id")
)",
        },
      ],
    },
    {
      "name": "0000000000000-generated.yml",
      "querySet": [
        {
          "query": "ALTER TABLE "caliobase_test_migrations_entity"
ADD "description" character varying NOT NULL",
        },
      ],
    },
    {
      "name": "0000000000001-generated.yml",
      "querySet": [
        {
          "query": "ALTER TABLE "caliobase_test_migrations_entity" DROP COLUMN "description"",
        },
      ],
    },
  ],
}
`;

exports[`runMigrations should skip zeroth migration if not empty 1`] = `
{
  "newQueryExcuted": [],
  "pendingQueryExecuted": [
    {
      "name": "-0000000000001-generated.yml",
      "querySet": [
        {
          "query": "CREATE TABLE "caliobase_test_migrations_entity" (
  "id" SERIAL NOT NULL,
  "name" character varying NOT NULL,
  CONSTRAINT "PK_04e9c1f71b555b5faab531dc5fb" PRIMARY KEY ("id")
)",
        },
      ],
    },
    {
      "name": "0000000000000-generated.yml",
      "querySet": [
        {
          "query": "ALTER TABLE "caliobase_test_migrations_entity"
ADD "description" character varying NOT NULL",
        },
      ],
    },
  ],
}
`;

exports[`runMigrations should skip zeroth migration if not empty 2`] = `
{
  "newQueryExcuted": [],
  "pendingQueryExecuted": [
    {
      "name": "0000000000001-generated.yml",
      "querySet": [
        {
          "query": "ALTER TABLE "caliobase_test_migrations_entity" DROP COLUMN "description"",
        },
      ],
    },
  ],
}
`;

exports[`runMigrations should skip zeroth migration if not empty 3`] = `
{
  "newQueryExcuted": [],
  "pendingQueryExecuted": [],
}
`;
